--- a/Pro131_Nhom4/appsettings.json
+++ b/Pro131_Nhom4/appsettings.json
@@ -1,20 +1,22 @@
 {
 
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "JWT": {
-        "SecretKey": "My Public Key Key Key Key Key Key Key Key Key Key Key Key Key Key Key Key",
-        "Issuer": "Identity_Demo.API",
-        "Audience": "Identity_Demo.CLient",
-        "Subject": "Identity_Demo.AccessToken",
-        "DurationInMinutes": 60
-    },
-    "ConnectionStrings": {
-        "MyCS": "Server=DESKTOP-VVKT5NE\\SQLEXPRESS;Database=test;Trusted_Connection=True;trustServerCertificate=True;"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "JWT": {
+    "SecretKey": "My Public Key Key Key Key Key Key Key Key Key Key Key Key Key Key Key Key",
+    "Issuer": "Identity_Demo.API",
+    "Audience": "Identity_Demo.CLient",
+    "Subject": "Identity_Demo.AccessToken",
+    "DurationInMinutes": 60
+  },
+  "ConnectionStrings": {
+    "MyCS": "Server=DESKTOP-P8UA93V\\SQLEXPRESS;Database=1311;Trusted_Connection=True;trustServerCertificate=True;"
+  }
+
+
 }
