update login, Api user

--- a/Pro131_Nhom4/appsettings.json
+++ b/Pro131_Nhom4/appsettings.json
@@ -15,7 +15,7 @@
     "DurationInMinutes": 60
   },
     "ConnectionStrings": {
-        "MyCS": "Server=DESKTOP-P8UA93V\\SQLEXPRESS;Database=1311;Trusted_Connection=True;trustServerCertificate=True;"
+        "MyCS": "Server=DESKTOP-VVKT5NE\\SQLEXPRESS;Database=1311;Trusted_Connection=True;trustServerCertificate=True;"
     }
 
 
