--- a/Pro131_Nhom4/appsettings.json
+++ b/Pro131_Nhom4/appsettings.json
@@ -14,7 +14,7 @@
         "Subject": "Identity_Demo.AccessToken",
         "DurationInMinutes": 60
     },
-  "ConnectionStrings": {
-    "MyCS": "Server=DESKTOP-P8UA93V\\SQLEXPRESS;Database=13111;Trusted_Connection=True;trustServerCertificate=True;"
-  }
+    "ConnectionStrings": {
+        "MyCS": "Server=DESKTOP-VVKT5NE\\SQLEXPRESS;Database=13111;Trusted_Connection=True;trustServerCertificate=True;"
+    }
 }
